# mfci

./: CMakeLists.txt  mfci-build.sh  test.c
src/: CMakeLists.txt  esvo_in_data_init.c  esvo_in_data_init.h  in_structure_init.c  in_structure_init.h  input_structs.h  io_structures.h  mfci1.c  mfci2.c  mfci3.c  shm_proto.c  shm_proto.h  test1.c  test2.c  test3.c  test4.c  write.c
src/esvo-shm-lib/: CMakeLists.txt  esvo_in_data_init.c  io_structures.h  shm_proto.c  shm_proto.h
src/ius/: CMakeLists.txt  ius.c
src/tests/: CMakeLists.txt
src/tests/ch17-extrm-exmp/: CMakeLists.txt
src/tests/pass-struct/: CMakeLists.txt  passing_struc_to_p.c
src/tests/pshm/: CMakeLists.txt  pshm_ucase.h  pshm_ucase_bounce.c  pshm_ucase_send.c
src/tests/raw-shm-exmp/: CMakeLists.txt
src/trash/: mfci_in_b_init.c  mfci_in_b_init.h
tests/: CMakeLists.txt  test.sh
